filter null when create list from dist display